# taetype

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
scripts/gen-images/: .gitignore  01-subsetting-measure.js  01-subsetting-render.js  02-instancing-build.js  02-instancing-render.js  03-color-build.js  03-color-render.js  04-shaping-build.js  04-shaping-render.js  package-lock.json  package.json
scripts/gen-images/lib/: sfnt-tools.js
src/font/: color.rs  mod.rs
src/font/decoder/: glyf.rs  io.rs  meta.rs  mod.rs  ttf.rs  woff2.rs
src/font/instancer/: axis.rs  coords.rs  cvar.rs  gvar.rs  hvar.rs  ivs.rs  loca.rs  mod.rs  mvar.rs  var_tests.rs
src/font/subsetter/: cff_build.rs  cff_parse.rs  cmap.rs  glyf.rs  mod.rs  seac.rs  ttf_dir.rs
src/lib/: font_cache.rs  lib.rs  ops.rs  registry.rs  shape.rs  text.rs
